# zen-gtk-themes

./: .gitignore  AUTHORS  Gnomelook-description-Zen  Makefile.am  Makefile.in  NEWS  README  README.in  README.md  README.od  README.od.in  autogen.sh  build  configure  configure.ac  copy.sh  install  libreoffice-patch.sh  link.sh  makepkg.sh  merge.sh  pkglist  remove  rmlink.sh  test.sh
XZen-blua/gtk-2.0/: gtkrc
XZen-blua/gtk-2.0/apps/: libreoffice.rc
XZen-blua/gtk-3.0/: gtk.css  panel.css
XZen-blua/xfce-notify-4.0/: gtkrc
XZen-nigra/: index.theme
XZen-nigra/gtk-2.0/: panel.rc
XZen-nigra/gtk-3.0/: gtk.css
XZen-nokto/: index.theme
XZen-nokto/gtk-2.0/: gtkrc
XZen-nokto/gtk-3.0/: gtk-widgets.css  gtk.css
XZen-papero/: index.theme
XZen-papero/gtk-2.0/: gtk-widgets.rc  gtkrc  papero.rc
XZen-papero/gtk-3.0/: gtk.css  panel.css  settings.ini
XZen-papero/xfce-notify-4.0/: gtkrc
XZen/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc
XZen/gtk-2.0/apps/: libreoffice.rc
XZen/gtk-3.0/: gtk-widgets.css  gtk.css  settings.ini
Zen/: index.theme
Zen-bicolor/: index.theme
Zen-bicolor/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc
Zen-bicolor/gtk-3.0/: gtk-dark.css  gtk-widgets.css  gtk.css  panel.css  settings.ini
Zen-blua/: index.theme
Zen-blua/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc  xfce.rc
Zen-blua/gtk-2.0/apps/: libreoffice.rc
Zen-blua/gtk-3.0/: gtk-dark.css  gtk-widgets.css  gtk.css  settings.ini
Zen-blua/xfce-notify-4.0/: gtkrc
Zen-griza/: index.theme
Zen-griza/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc  xfce.rc
Zen-griza/gtk-3.0/: gtk-dark.css  gtk-widgets.css  gtk.css  panel.css  settings.ini
Zen-griza/xfce-notify-4.0/: gtkrc
Zen-nigra/: index.theme
Zen-nigra/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc  xfce.rc
Zen-nigra/gtk-3.0/: csd.css  gtk-dark.css  gtk-widgets.css  gtk.css  lightdm-gtk-greeter.css  panel.css  settings.ini
Zen-nigra/xfce-notify-4.0/: gtkrc
Zen-nokto/: index.theme
Zen-nokto/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc  xfce.rc
Zen-nokto/gtk-3.0/: gtk-widgets.css  gtk.css  panel.css  settings.ini
Zen-nokto/xfce-notify-4.0/: gtkrc
Zen-papero/: index.theme
Zen-papero/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc  papero.rc  xfce.rc
Zen-papero/gtk-2.0/apps/: libreoffice.rc
Zen-papero/gtk-3.0/: csd.css  gtk-dark.css  gtk-widgets.css  gtk.css  lightdm-gtk-greeter.css  panel.css  settings.ini
Zen-papero/xfce-notify-4.0/: gtkrc
Zen-verda/: index.theme
Zen-verda/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc  xfce.rc
Zen-verda/gtk-3.0/: csd.css  gtk-dark.css  gtk-widgets.css  gtk.css  settings.ini
Zen-verda/xfce-notify-4.0/: gtkrc
Zen/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc  xfce.rc
Zen/gtk-3.0/: gtk-dark.css  gtk-widgets.css  gtk.css  panel.css  settings.ini
Zen/xfce-notify-4.0/: gtkrc
ZenX/: index.theme
ZenX-blua/: index.theme
ZenX-blua/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc
ZenX-blua/gtk-3.0/: gtk-widgets.css  gtk.css  settings.ini
ZenX-blua/xfce-notify-4.0/: gtkrc
ZenX-griza/: index.theme
ZenX-griza/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc  xfce.rc
ZenX-griza/gtk-2.0/apps/: libreoffice.rc
ZenX-griza/gtk-3.0/: gtk-widgets.css  gtk.css  settings.ini
ZenX-griza/xfce-notify-4.0/: gtkrc
ZenX-nigra/: index.theme
ZenX-nigra/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc
ZenX-nigra/gtk-3.0/: gtk-widgets.css  gtk.css  settings.ini
ZenX-nigra/xfce-notify-4.0/: gtkrc
ZenX-nokto/: index.theme
ZenX-nokto/gtk-2.0/: gtkrc  panel.rc
ZenX-nokto/gtk-3.0/: gtk-widgets.css  gtk.css  settings.ini
ZenX-papero/: index.theme
ZenX-papero/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc  papero.rc
ZenX-papero/gtk-2.0/apps/: libreoffice.rc
ZenX-papero/gtk-3.0/: gtk-widgets.css  gtk.css  panel.css  settings.ini
ZenX-verda/: index.theme
ZenX-verda/gtk-2.0/: gtkrc  panel.rc
ZenX-verda/gtk-2.0/apps/: libreoffice.rc
ZenX-verda/gtk-3.0/: gtk-widgets.css  gtk.css  panel.css  settings.ini
ZenX-verda/xfce-notify-4.0/: gtkrc
ZenX/gtk-2.0/: gtk-widgets.rc  gtkrc  panel.rc
ZenX/gtk-3.0/: gtk-widgets.css  gtk.css
arch/: PKGBUILD.in
cache/: PKGBUILD  PKGBUILD.in
